# Modern_GUI_PyDracula_CPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app.cpp  app.hpp  app.ui  main.cpp  qt5app.rc  resources.qrc
CMake/: spsAsan.cmake
modules/: CMakeLists.txt  app_functions.cpp  app_functions.hpp  app_settings.cpp  app_settings.hpp  ui_functions.cpp  ui_functions.hpp  ui_styles.cpp  ui_styles.hpp
widgets/: CMakeLists.txt  custom_grips.cpp  custom_grips.cpp~  custom_grips.hpp  custom_grips.hpp~  toggle.cpp  toggle.hpp
